# rrfuzz_artifact

./: .gitignore  HOLDBACK.md  base_commit.txt  patch_notes.md  readme.md
rr_snapshot/linux-user/rr_fuzzing/: Makefile  meson.build
rr_snapshot/linux-user/rr_fuzzing/config/template/: rr_config.fuzzing.template  rr_config.record.template  rr_config.replay.template
rr_snapshot/linux-user/rr_fuzzing/fuzzing/: config.py  fuzz_main.py  fuzz_multiprocess.py  quickstart.md  readme.md
rr_snapshot/linux-user/rr_fuzzing/fuzzing/conductor/: __init__.py  afl_enhanced_mutator.py  async_logger.py  bb_trace_parser.py  campaign_manager.py  checkpoint.py  conductor_types.py  constants.py  coverage.py  evolution_engine.py  fuzzing_core.py  fuzzing_metrics.py  init_detector.py  instruction.py  io_mutator.py  iteration_result.py  lifecycle_manager.py  mutation_dependency_graph.py  protocol_adapters.py  qemu_executor.py  security_watchdog.py  seed_manager_adapter.py  shadow_registry.py  shared_memory.py  static_analyzer.py  syscall_block.py  target_profile.py  trace_manager.py  trace_pool.py  watchdog.py
rr_snapshot/linux-user/rr_fuzzing/fuzzing/config/: target_profile.schema.json
rr_snapshot/linux-user/rr_fuzzing/fuzzing/multiprocess/: __init__.py  corpus_manager.py  crash_analyzer.py  energy_scheduler.py  fuzz_master.py  fuzz_master.py.backup  fuzz_master.py.backup2  recipe_pool.py  seed_queue_advanced.py  shared_resources.py  syscall_block.py
rr_snapshot/linux-user/rr_fuzzing/fuzzing/orchestrator/: multi_trace_fuzzer.py
rr_snapshot/linux-user/rr_fuzzing/fuzzing/recorder/: auto_recorder.py
rr_snapshot/linux-user/rr_fuzzing/include/: rr_aux_data.h  rr_bb_trace.h  rr_constants.h  rr_coverage.h  rr_dynamic_trace.h  rr_framework.h  rr_mapping_manager.h  rr_mock_ioctls.h  rr_replay_pure.h  rr_replay_strace.h  rr_syscall_dispatch.h  rr_syscall_info.h  rr_syscall_tree.h  rr_syscallparser.h
rr_snapshot/linux-user/rr_fuzzing/src/common/: rr_mapping_manager.c  rr_mock_ioctls.c
(+67 files in other folders)
